--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,49 @@
 /* Add your CSS to this file */
+:root{
+    --default-font-size: 18px;
+    --default-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,'Helvetica Neue', Arial, "Noto Sans",sans-serif;
+    --header-link-color: #6b7280;
+    --header-hoverlink-color: #5a67d8;
+}
+
 body {
     margin: 0;
-    font-size: 16px;
+    font-size: var(--default-font-size); /*Originally was 16px*/
+    font-family: var(--default-font-family);
 }
 
 .container {
     margin: 0 auto;
     max-width: 960px;
     width: 100%;
+}
+
+/* HEADER SECTION */
+
+header h1{ 
+    font-size: var(--default-font-size);
+}
+
+header div{
+    display: flex;
+    justify-content: space-between;
+}
+
+header ul{
+    list-style: none;
+    margin: 12px 0px;
+}
+
+header li{
+    display: inline;
+    margin-right: 10px;
+}
+
+header li a{
+    text-decoration: none;
+    color: var(--header-link-color);
+}
+
+header li a:hover{
+    color: var(--header-hoverlink-color);
 }
