--- a/styles.css
+++ b/styles.css
@@ -197,12 +197,21 @@ article img{
     flex-direction: column;
     align-items: center;
 }
+.newsletter h3{
+    font-size: var(--labt-h2-size);
+    margin: 0;
+    padding: 0;
+}
+
+.newsletter p{
+    width: 50%;
+}
 
 form{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 45%;
+    width: 50%;
 }
 
 button[type=submit]{
@@ -215,7 +224,7 @@ button[type=submit]{
 }
 
 input[type=email]{
-    width: 100%;
+    width: 115%;
     padding: 6% 10%;
     border: none;
     border-radius: var(--card-radius);
