--- a/styles.css
+++ b/styles.css
@@ -208,10 +208,9 @@ article img{
 }
 
 form{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     width: 50%;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
 }
 
 button[type=submit]{
@@ -219,15 +218,19 @@ button[type=submit]{
     background-color: var(--header-hoverlink-color);
     text-decoration: none;
     border: none;
-    padding: 3% 10%;
+    padding: 8% 0%;
     border-radius: var(--card-radius);
 }
 
 input[type=email]{
-    width: 115%;
-    padding: 6% 10%;
+    width: 90%;
+    padding: 4% 4%;
     border: none;
     border-radius: var(--card-radius);
+}
+
+.message{
+    padding: 15px 0px 0px 0px;
 }
 
 /* FOOTER SECTION */
