--- a/styles.css
+++ b/styles.css
@@ -112,13 +112,19 @@ header li a:hover{
     border: 1px solid var(--card-border-color);
     box-shadow: 3px 5px 5px var(--card-border-color);
     border-radius: var(--card-radius);
-    padding: 20px;
+    padding: 10px 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .card img{
     width: 100%;
-    height: 50%;
+    height: 45%;
     margin-top: 10px;
+}
+
+.card-body h3{
+    margin: 11px 0px;
 }
 
 /* TESTING SECTION */
